fixes maven publishing for github